# kube-frontend-forge-controller

./: Cargo.toml  README.md
.github/workflows/: docker-images.yml
config/crd/bases/: frontend-forge.kubesphere.io_frontendintegrations.yaml
config/rbac/: controller-rbac.yaml  runner-rbac.yaml
config/samples/: fi-inspecttask.yaml  fi-nested-menu-demo.yaml
crates/api/src/: lib.rs
crates/controller/: Dockerfile
crates/controller/src/: main.rs
crates/runner/: Dockerfile
crates/runner/src/: main.rs  manifest.rs
crates/runner/src/manifest/: v1.rs
spec/: Manifest.md  crds.md  design.md
