[workspace]
members = [
  "crates/common",
  "crates/api",
  "crates/controller",
  "crates/runner",
  "xtask",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
hex = "0.4"
k8s-openapi = { version = "0.27", features = ["latest"] }
kube = { version = "3.0.1", features = ["client", "derive", "runtime", "rustls-tls"] }
kube-runtime = "3.0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
schemars = { version = "1.2.1", features = ["chrono04"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.33"
sha2 = "0.10"
snafu = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
